# opusic-c

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: decoder.rs  dred.rs  encoder.rs  lib.rs  mem.rs  repacketizer.rs  utils.rs
src/multistream/: decoder.rs  encoder.rs  mod.rs
tests/: opus.rs
