[package]
name = "opusic-c"
version = "1.5.2"
authors = ["Douman <douman@gmx.se>"]
description = "High level bindings to libopus"
readme = "README.md"
repository = "https://github.com/DoumanAsh/opusic-c"
license = "BSD-3-Clause"
edition = "2018"
keywords = ["libopus", "opus", "codec"]
categories = ["encoding", "external-ffi-bindings", "multimedia::audio", "multimedia::encoding"]

[dependencies.opusic-sys]
version = "0.5.5"
default-features = false

[features]
# Enables DRED feature
dred = ["opusic-sys/dred"]

[package.metadata.docs.rs]
features = ["dred"]
